# R401-Systems

./: .gitignore
Voting_Machine/cm/: Cargo.toml
Voting_Machine/cm/src/: main.rs
Voting_Machine/v010_spaghetti/: Cargo.toml
Voting_Machine/v020_configuration/: Cargo.toml
Voting_Machine/v020_configuration/src/: configuration.rs  main.rs
Voting_Machine/v021_app_builder/: Cargo.toml
Voting_Machine/v021_app_builder/src/: app_builder.rs  configuration.rs  lib.rs  main.rs
Voting_Machine/v030_domain/: Cargo.toml
Voting_Machine/v030_domain/src/: app_builder.rs  domain.rs  lib.rs
Voting_Machine/v040_memory/: Cargo.toml
Voting_Machine/v040_memory/src/: app_builder.rs  configuration.rs  domain.rs  lib.rs  main.rs  storage.rs
Voting_Machine/v040_memory/src/storages/: memory.rs
Voting_Machine/v041_file/: Cargo.toml
Voting_Machine/v041_file/src/: app_builder.rs  configuration.rs  domain.rs
Voting_Machine/v041_file/src/storages/: file.rs
Voting_Machine/v050_use_cases/: Cargo.toml
Voting_Machine/v050_use_cases/src/: domain.rs  main.rs
Voting_Machine/v060_text_interfaces/: Cargo.toml  machine.json
Voting_Machine/v060_text_interfaces/src/: app_builder.rs  configuration.rs  domain.rs  main.rs  use_cases.rs
Voting_Machine/v060_text_interfaces/src/interfaces/: cli_interface.rs  lexicon.rs  mod.rs
Voting_Machine/v060_text_interfaces/src/interfaces/lexicons/: english.rs  french.rs
