[workspace]
members = [""]

[package]
name = "v041_file"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
clap = { version = "3.0", features = ["derive"] }
derive = "1.0.0"
async-trait = "0.1.87"
serde = "1.0.218"
serde_json = "1.0.140"
